--- a/lk.html
+++ b/lk.html
@@ -25,7 +25,7 @@
           <aside class="navbar-nav me-auto mb-5 mb-md-7">
 
             <div class="linklk">
-              <a href="Main.html">Главная страница</a>
+              <a href="index.html">Главная страница</a>
             </div>
             
             <div id="image">
